[project]
name = "analyze"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.3.3",
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "ruff>=0.8.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "hypothesis>=6.126.0",
    "pytest>=8.3.4",
]
